examples/fails/3/Main.jif
import jif.runtime.Runtime;

public class Main authority(*) {
  public static
  void
  main {p←}
  (
    principal p,
    String[] args
  ) : {p→}
  throws
    Exception
  where
    authority(p)
  {
    final principal{p→} q = new PrincipalTest(p);

    if (q actsfor p) {
      Runtime[p].getRuntime().stdout(new label {p→}).println("delegation successful");
    }
    else {
      Runtime[p].getRuntime().stdout(new label {p→}).println("delegation failed");
    }
  }
}


/*
** vim: ts=2 sw=2 et cindent cino=\:0 syntax=java
*/
